# ckb-transactions-simulator

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
configs/: init.yaml  run.yaml
src/: client.rs  error.rs  main.rs  runtime.rs  storage.rs
src/config/: cli.yaml  init.rs  mod.rs  run.rs
src/types/: init.rs  mod.rs  run.rs  storage.rs
