[package]
name = "ckb-transactions-simulator"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
license = "MIT"
description = "A simulator to send CKB transactions continuously."
homepage = "https://github.com/yangby-cryptape/ckb-transactions-simulator"
repository = "https://github.com/yangby-cryptape/ckb-transactions-simulator"

[dependencies]
